# interaction-ros-humanoid

./: LICENSE
closest_person/: mainpage.dox  manifest.xml
closest_person/launch/: closest_person.launch
closest_person/nodes/: CMakeLists.txt  closest_person.cpp
person_base_link/: CMakeLists.txt  mainpage.dox  manifest.xml
person_base_link/launch/: person_base_link.launch
person_base_link/nodes/: person_base_link.cpp
